tests/compError/callNotFn.iota
// compError
// error: can not call type struct builtin:Number{}
// line:10 -> here
// error: can not call type struct builtin:Bool{}
// line:11 -> here
// error: can not call type struct builtin:String{}
// line:12 -> here

add1 = @x(builtin_Float64) x + 1
add1 1 2
true false
"test" 4